[package]
name = "heap"
version = "0.0.1"

[[bin]]
name = "heapserver"
test = true
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = true
plugin = false
path = "src/heap.rs"

[dependencies]
rand = "0.9.2"
rocket = "0.5.1"

